@@ -59,3 +59,10 @@ a[data-bs-toggle="collapse"].collapsed label > span:after{
 	background-color: gray;
 	border-color: gray;
 }
+
+#caweb-alert-banners [id^="alert-status-"] + .btn:before{
+	content: 'Display On';
+}
+#caweb-alert-banners [id^="alert-status-"]:checked + .btn:before{
+	content: 'Display Off';
+}
